[gd_scene load_steps=12 format=3 uid="uid://dtwrvfdlfqa0x"]

[ext_resource type="FontFile" uid="uid://bemooruqc0syy" path="res://menus/assets/theme_resources/pretendo.ttf" id="1_dqplu"]
[ext_resource type="Script" path="res://menus/copyright_notice.gd" id="1_toyc1"]
[ext_resource type="AudioStream" uid="uid://briufx41hbd1x" path="res://menus/assets/audio/logo.ogg" id="2_3sbu0"]
[ext_resource type="Script" path="res://menus/assets/theme_resources/bbcode_valign.gd" id="3_j34qj"]

[sub_resource type="FontVariation" id="FontVariation_pr8un"]
base_font = ExtResource("1_dqplu")
variation_embolden = 0.51

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfmkb"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
corner_detail = 7
expand_margin_left = 13.0
expand_margin_top = 8.0
expand_margin_right = 8.0

[sub_resource type="RichTextEffect" id="RichTextEffect_013ju"]
script = ExtResource("3_j34qj")

[sub_resource type="SystemFont" id="SystemFont_ac4f2"]
font_names = PackedStringArray("Sans-Serif")
font_weight = 650
hinting = 2
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_4a4qf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ihd6o"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_3sbu0")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pbmjy"]
_data = {
"RESET": SubResource("Animation_4a4qf"),
"intro": SubResource("Animation_ihd6o")
}

[node name="CopyrightNotice" type="Control" groups=["BaseScreen"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_toyc1")
metadata/_edit_horizontal_guides_ = [192.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -20
alignment = 1
vertical = true

[node name="LabelLogo" type="RichTextLabel" parent="BoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_dqplu")
theme_override_fonts/bold_font = SubResource("FontVariation_pr8un")
theme_override_font_sizes/normal_font_size = 28
theme_override_font_sizes/bold_font_size = 11
theme_override_styles/normal = SubResource("StyleBoxFlat_rfmkb")
bbcode_enabled = true
text = "%placeholder%[b][valign y=14]â’·[/valign][/b]"
fit_content = true
scroll_active = false
autowrap_mode = 0
custom_effects = [SubResource("RichTextEffect_013ju")]

[node name="LabelDetail" type="Label" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.647059, 0.647059, 0.647059, 1)
theme_override_constants/line_spacing = -5
theme_override_fonts/font = SubResource("SystemFont_ac4f2")
theme_override_font_sizes/font_size = 14
text = "No Rights, including the
copyrights of Game, Scenario,
Music and Program, reserved
by %placeholder%."
horizontal_alignment = 1
vertical_alignment = 1
visible_characters_behavior = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pbmjy")
}
autoplay = "intro"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
